--- a/style.css
+++ b/style.css
@@ -1,52 +1,61 @@
-/*style.css */
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
-    :root{
-     font-family: 'Montserrat', sans-serif;
-     --primary-color:#171717;
+body{
+  font-family: sans-serif;
+  font-size: 20px;
+
+
+}
+h1{
+  font-size: 2em;
+  margin-bottom: 1em;
+
+}
+ label,input,button{
+   display: block;
+   margin-bottom: 20px;
+ }
+ input {
+   font-size: 1em;
+   padding: 5px;
+ }
+ button{
+   cursor: pointer;
+ }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* 100% Image Width on Smaller Screens */
+/* @media only screen and (max-width: 700px){
+    .modal-content {
+      width: 100%;
     }
-    body{
-     margin: 0;
-     background-color:gray
-     color: blue;
+  }
+  
+  
+    @media screen and (max-width: 700px) {
+      .boxes {
+        display: grid;
+        grid-template-columns: 100%;
+        
+    
+      }
     }
-    header{
-     padding: 1rem;
-    }
-    main{
-     margin: auto;
-     text-align: center;
-    }
-    .title-section{
-     padding: 1rem;
-    }
-    #datepicker{
-     box-sizing: border-box;
-     width: 9rem;
-     padding: 00.2rem;
-     border-radius: 0.5rem;
-    }
-    .image-div{
-     width: 80%;
-     margin: auto;
-    }
-    #image_of_the_day{
-     width: 100%;
-    }
-    .video-div{
-     width: 80%;
-     margin: auto;
-    }
-    #videoLink{
-     width: 100%;
-     height: 70vh
-    }
-    .description-div{
-     width: 80%;
-     margin:0.1rem auto 1rem;
-     border: solid 1px grey;
-     padding: 0.5rem;
-     border-radius: 00.5rem;
-    }
-    #description{
-     line-height:1.82;
-    }
+     */
