--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
   font-family: sans-serif;
   font-size: 20px;
+  padding: 40px;
 
 
 }
@@ -9,9 +10,23 @@ h1{
   margin-bottom: 1em;
 
 }
+
+h2{ 
+  font-size: 1.5em;
+  padding-top: 1em ;
+  border-top: 1px solid #ddd;
+
+}
+form{
+  background:#eee ;
+  border: 2px solid #ddd;
+  padding: 20px;
+
+}
  label,input,button{
    display: block;
    margin-bottom: 20px;
+
  }
  input {
    font-size: 1em;
