--- a/style.css
+++ b/style.css
@@ -29,49 +29,12 @@ form{
    margin-bottom: 20px;
 
  }
- input {
+ button, input {
    font-size: 1em;
    padding: 5px;
  }
  button{
    cursor: pointer;
+   color:#ddd;
+   background:blue
  }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* 100% Image Width on Smaller Screens */
-/* @media only screen and (max-width: 700px){
-    .modal-content {
-      width: 100%;
-    }
-  }
-  
-  
-    @media screen and (max-width: 700px) {
-      .boxes {
-        display: grid;
-        grid-template-columns: 100%;
-        
-    
-      }
-    }
-     */
