--- a/reset.css
+++ b/reset.css
@@ -1,6 +1,7 @@
-http://meyerweb.com/eric/tools/css/reset/ 
+//http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
+
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -14,7 +15,9 @@ table, caption, tbody, tfoot, thead, tr, th, td,
 article, aside, canvas, details, embed, 
 figure, figcaption, footer, header, hgroup, 
 menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+time, mark, audio, video 
+
+{
 	margin: 0;
 	padding: 0;
 	border: 0;
